--- a/ELK/基础搜索.md
+++ b/ELK/基础搜索.md
@@ -1,4 +1,4 @@
-### 高亮显示
+### 查询"手机"
 
 ```java
 GET /product_index/_search
@@ -8,6 +8,29 @@ GET /product_index/_search
       "name": "手机"
     }
   },
+  //分页
+  "from": 2,
+  "size": 2,
+  //排序
+  "sort": [
+    {
+      "price": {
+        "order": "asc"
+      }
+    }
+  ],
+  //指定显示多个字段 : ["name","price"]
+  "_source": "name",
+  //过滤
+  "filter": {
+  	"range": {
+			"price": {
+      	"gte": 10,
+        "lte": 50
+      }
+    }
+  },
+  //高亮显示
   "highlight": {
     "fields": {
       "name": {
@@ -19,86 +42,10 @@ GET /product_index/_search
 }
 ```
 
-### keyword类型
-
-```java
-//不会进行分词查询
-```
-
-### match
-
-```java
-GET /product_index/_search
-{
-  "query": {
-    "match": {
-      "name": "手机"
-    }
-  }
-}
-```
-
-### 只显示指定字段
-
-```java
-GET /product_index/_search
-{
-  "query": {
-    "match": {
-      "name": "手机"
-    }
-  },
-  //显示多列 : ["name","price"]
-  "_source": "name"
-}
-```
-
-### term
-
-```java
-//直接查找"手机"这个词的倒排搜索,不会将"手机"进行分词查询
-GET /user_index/_search
-{
-  "query": {
-    "term": {
-      "name": {
-        "value": "手机"
-      }
-    }
-  }
-}
-```
-
-### 过滤
-```java
-GET /product_index/_search
-{
-  "query": {
-    "bool": {
-      "must": [
-        {
-          "match": {
-            "name": "手机"
-          }
-        }
-      ],
-      "filter": {
-        "range": {
-          "age": {
-            "gte": 10,
-            "lte": 50
-          }
-        }
-      }
-    }
-  }
-}
-```
-
 ### bool
 
 ```java
-//and查询
+//类似and
 GET /product_index/_search
 {
   "query": {
@@ -119,7 +66,7 @@ GET /product_index/_search
   }
 }
 
-//or查询
+//类似or
 GET /product_index/_search
 {
   "query": {
@@ -140,7 +87,7 @@ GET /product_index/_search
   }
 }
 
-//not查询
+//类似not
 GET /product_index/_search
 {
   "query": {
@@ -157,38 +104,33 @@ GET /product_index/_search
 }
 ```
 
-### 分页
+### term-不分词查询
 
 ```java
 GET /product_index/_search
 {
   "query": {
-    "match": {
-      "name": "手机"
-    }
-  },
-  "from": 2,
-  "size": 2
-}
-```
-
-### 排序
-
-```java
-GET /product_index/_search
-{
-  "query": {
-    "match": {
-      "name": "手机"
-    }
-  },
-  "sort": [
-    {
-      "price": {
-        "order": "asc"
+    //直接查找"手机"这个词的倒排搜索,不会将"手机"进行分词查询
+    //这里默认情况下就算name等于"手机",也查不出来
+    "term": {
+      "name": {
+        "value": "手机"
       }
     }
-  ]
+  }
 }
 ```
 
+### keyword查询
+
+```java
+GET /product_index/_search
+{
+  "query": {
+    "match": {
+      //如果name是keyword类型,那么这里不会进行分词查询,只会去找倒排索引是"手机"的
+      "name": "手机"
+    }
+  }
+}
+```
