--- a/ELK/基础搜索.md
+++ b/ELK/基础搜索.md
@@ -104,14 +104,16 @@ GET /product_index/_search
 }
 ```
 
-### term-不分词查询
+### 不分词查询
+
+#### term
 
 ```java
 GET /product_index/_search
 {
   "query": {
-    //直接查找"手机"这个词的倒排搜索,不会将"手机"进行分词查询
-    //这里默认情况下就算name等于"手机",也查不出来
+    //直接查找"手机"这个词的倒排搜索,不会对"手机"这个词进行分词查询
+    //默认情况分词器是'Standard Analyzer',这样就会导致即使name等于"手机",也会查不出来
     "term": {
       "name": {
         "value": "手机"
@@ -121,14 +123,14 @@ GET /product_index/_search
 }
 ```
 
-### keyword查询
+#### keyword
 
 ```java
 GET /product_index/_search
 {
   "query": {
     "match": {
-      //如果name是keyword类型,那么这里不会进行分词查询,只会去找倒排索引是"手机"的
+      //如果name字段是keyword类型,那么这里不会进行分词查询
       "name": "手机"
     }
   }
