--- a/ELK/基础操作.md
+++ b/ELK/基础操作.md
@@ -18,21 +18,18 @@ PUT /user_index
 {
   "mappings": {
     "properties": {
-      "userId":{
-        "type": "long"
-      },
       "name":{
         "type": "text"
       },
-      "createTime":{
-        "type": "date"
+      "age":{
+        "type": "integer"
       }
     }
   }
 }
 
-//创建文档同时会创建索引
-//或者覆盖文档
+//创建文档,如果不存在索引同时会创建索引
+//覆盖文档
 PUT /user_index/_doc/10000001
 {
 	"name":"CR",
