--- a/Spring Boot/源码解析-数据源的选择.md
+++ b/Spring Boot/源码解析-数据源的选择.md
@@ -1,45 +1,127 @@
-1.进入DataSourceAutoConfiguration
+#### 1.DataSourceAutoConfiguration
 
-    @Conditional(PooledDataSourceCondition.class)
-    //如果没有配置其他DataSource就生效
-    @ConditionalOnMissingBean({ DataSource.class, XADataSource.class })
-    //Hikari数据源、Tomcat连接源...
-    @Import({ DataSourceConfiguration.Hikari.class, DataSourceConfiguration.Tomcat.class,
-			DataSourceConfiguration.Dbcp2.class, DataSourceConfiguration.Generic.class,
-			DataSourceJmxConfiguration.class })
-    protected static class PooledDataSourceConfiguration {
+```java
+@Configuration(proxyBeanMethods = false)
+@ConditionalOnClass({ DataSource.class, EmbeddedDatabaseType.class })
+//EnableConfigurationProperties注解会将DataSourceProperties注入Spring中
+@EnableConfigurationProperties(DataSourceProperties.class)
+public class DataSourceAutoConfiguration {
 
-    }
+  @Configuration(proxyBeanMethods = false)
+  //PooledDataSourceCondition继承AnyNestedCondition
+	@Conditional(PooledDataSourceCondition.class) //2
+  //没有自定义的DataSource
+	@ConditionalOnMissingBean({ DataSource.class, XADataSource.class })
+	//加载顺序如下Hikari>Dbcp2
+  @Import({ DataSourceConfiguration.Hikari.class, //4
+           	DataSourceConfiguration.Tomcat.class,  
+           	DataSourceConfiguration.Dbcp2.class, 
+           	DataSourceConfiguration.OracleUcp.class, 
+            DataSourceConfiguration.Generic.class, 
+            DataSourceJmxConfiguration.class})
+	protected static class PooledDataSourceConfiguration {}
+}
+```
 
-2.进入PooledDataSourceCondition
+#### 2.PooledDataSourceCondition
 
-    //AnyNestedCondition代表"OR"
-    //下面两个条件有一个满足就行
-    static class PooledDataSourceCondition extends AnyNestedCondition {
-        @ConditionalOnProperty(prefix = "spring.datasource", name = "type")
-        static class ExplicitType {
+**AnyNestedCondition表示只要有一个Condition满足,则整个Condition成立**
 
-        }
-        
-	@Conditional(PooledDataSourceAvailableCondition.class)
-        static class PooledDataSourceAvailable {
-    
-        }
-    }
+```java
+static class PooledDataSourceCondition extends AnyNestedCondition {
 
-    
-3.进入PooledDataSourceAvailableCondition
+	@ConditionalOnProperty(prefix = "spring.datasource", name = "type")
+  static class ExplicitType {}
 
-    //进入getMatchOutcome方法
-    if (DataSourceBuilder.findType(context.getClassLoader()) != null) {
-      ...
-    }
-    ↓
-    //进入findType方法
-    //循环数据源字符串数组
-    //DATA_SOURCE_TYPE_NAMES = new String[] { "com.zaxxer.hikari.HikariDataSource", "org.apache.tomcat.jdbc.pool.DataSource", "org.apache.commons.dbcp2.BasicDataSource" };
-    for (String name : DATA_SOURCE_TYPE_NAMES) {
-      ...
-    }
+	@Conditional(PooledDataSourceAvailableCondition.class) //3
+	static class PooledDataSourceAvailable {}
+  
+}
+```
+
+#### 3.PooledDataSourceAvailableCondition#getMatchOutcome
+
+**SpringBoot版本4.1.2**
+
+```java
+static class PooledDataSourceAvailableCondition extends SpringBootCondition {
+	public ConditionOutcome getMatchOutcome(ConditionContext context, AnnotatedTypeMetadata metadata) {
+		Builder message = ConditionMessage.forCondition("PooledDataSource", new Object[0]);
+		return DataSourceBuilder.findType(context.getClassLoader()) != null ? 
+      										ConditionOutcome.match(message.foundExactly("supported DataSource")) : 
+    												ConditionOutcome.noMatch(message.didNotFind("supported DataSource").atAll());
+	}
+}
+↓
+↓
+public static Class<? extends DataSource> findType(ClassLoader classLoader) {
+	DataSourceSettings preferredDataSourceSettings = new DataSourceSettingsResolver(classLoader).getPreferredDataSourceSettings();
+	return (preferredDataSourceSettings != null) ? preferredDataSourceSettings.getType() : null;
+}
+↓
+↓
+DataSourceSettingsResolver(ClassLoader classLoader) {
+	List<DataSourceSettings> supportedProviders = resolveAvailableDataSourceSettings(classLoader);
+	this.preferredDataSourceSettings = (!supportedProviders.isEmpty()) ? supportedProviders.get(0) : null;
+}
+↓
+↓
+private static List<DataSourceSettings> resolveAvailableDataSourceSettings(ClassLoader classLoader) {
+	List<DataSourceSettings> providers = new ArrayList<>();
+  //Hikari
+  addIfAvailable(providers, create(classLoader, "com.zaxxer.hikari.HikariDataSource", (type) -> new DataSourceSettings(type, (aliases) -> aliases.addAliases("url", "jdbc-url"))));
+}
+```
+
+**SpringBoot版本2.3.3.RELEASE**
+
+```java
+static class PooledDataSourceAvailableCondition extends SpringBootCondition {
+	public ConditionOutcome getMatchOutcome(ConditionContext context, AnnotatedTypeMetadata metadata) {
+		ConditionMessage.Builder message = ConditionMessage.forCondition("PooledDataSource");
+		if (DataSourceBuilder.findType(context.getClassLoader()) != null) {
+			return ConditionOutcome.match(message.foundExactly("supported DataSource"));
+		}
+	}
+}
+↓
+↓
+public static Class<? extends DataSource> findType(ClassLoader classLoader) {
+	/**
+	 * DATA_SOURCE_TYPE_NAMES = new String[] {
+   *  "com.zaxxer.hikari.HikariDataSource",
+   *  "org.apache.tomcat.jdbc.pool.DataSource",
+   *  "org.apache.commons.dbcp2.BasicDataSource" };
+   */
+  for (String name : DATA_SOURCE_TYPE_NAMES) {
+		return (Class<? extends DataSource>) ClassUtils.forName(name, classLoader);
+	}
+}
+```
+
+#### 4.Hikari
+
+```java
+@Configuration(proxyBeanMethods = false)
+@ConditionalOnClass(HikariDataSource.class)
+//由于Hikari是第一个配置,还没有其他DataSource,所以这个配置会生效
+@ConditionalOnMissingBean(DataSource.class)
+//判断是否有spring.datasource.type配置,如果有判断是否等于com.zaxxer.hikari.HikariDataSource,如果等于这个配置会生效
+//如果没有spring.datasource.type配置,这个配置也会生效
+@ConditionalOnProperty(name = "spring.datasource.type", havingValue = "com.zaxxer.hikari.HikariDataSource", matchIfMissing = true)
+static class Hikari {
+
+  @Bean
+  //把前缀spring.datasource.hikari的配置赋值到对应属性
+	@ConfigurationProperties(prefix = "spring.datasource.hikari")
+	HikariDataSource dataSource(DataSourceProperties properties) {
+		HikariDataSource dataSource = createDataSource(properties, HikariDataSource.class);
+		if (StringUtils.hasText(properties.getName())) {
+			dataSource.setPoolName(properties.getName());
+		}
+		return dataSource;
+	}
+}
+```
 
 ---
