--- a/Spring Boot/源码解析-数据源的选择.md
+++ b/Spring Boot/源码解析-数据源的选择.md
@@ -1,3 +1,5 @@
+### Spring Boot版本:2.4.12
+
 #### 1.DataSourceAutoConfiguration
 
 ```java
@@ -40,8 +42,6 @@ static class PooledDataSourceCondition extends AnyNestedCondition {
 ```
 
 #### 3.PooledDataSourceAvailableCondition#getMatchOutcome
-
-**SpringBoot版本4.1.2**
 
 ```java
 static class PooledDataSourceAvailableCondition extends SpringBootCondition {
