--- a/操作系统/概念.md
+++ b/操作系统/概念.md
@@ -34,9 +34,48 @@ Linux把内存分割成页来管理,每页可以存放4096个字节,4KB
 预读机制,顺序读的速度快于随机读,顺序写的速度快于随机写
 ```
 
-#### 零拷贝(MMAP)
+#### 零拷贝(mmap和sendFile)
 
 ```
 所谓零拷贝,就是用户态与内核态的数据拷贝的次数为零.省去从内核态复制到用户态的过程.
 ```
 
+**传统IO**
+
+```
+4次上下文切换(用户态 -> 内核态 -> 用户态 -> 内核态 -> 用户态)
+4次拷贝
+1.磁盘文件 DMA拷贝 到内核缓冲区
+2.内核缓冲区 CPU拷贝 到用户缓冲区
+3.用户缓冲区 CPU拷贝 到Socket缓冲区
+4.Socket缓冲区 DMA拷贝 到协议引擎
+```
+
+![传统IO](./传统IO.png)
+
+**mmap**
+
+```
+mmap将磁盘文件映射到内存,支持读和写,对内存的操作会反映在磁盘文件上,适合小数据量读写
+
+4次上下文切换(用户态 -> 内核态 -> 用户态 -> 内核态 -> 用户态)
+3次拷贝
+1.磁盘文件 DMA拷贝 到内核缓冲区
+2.内核缓冲区 CPU拷贝 到Socket缓冲区
+3.Socket缓冲区 DMA拷贝 到协议引擎
+```
+
+![mmap](./mmap.png)
+
+**sendFile**
+
+```
+sendfile适合大文件传输
+
+2次上下文切换(用户态 -> 内核态 -> 用户态)
+2次拷贝
+1.磁盘文件 DMA拷贝 到内核缓冲区
+2.内核缓冲区 DMA拷贝 到协议引擎
+```
+
+![sendFile](./sendFile.png)
