--- a/操作系统/概念.md
+++ b/操作系统/概念.md
@@ -1,3 +1,17 @@
+#### DMA
+
+```
+Direct Memory Access,直接内存存取
+CPU老哥太累了,所以找了个小弟,就是DMA替他完成一部分工作,这样CPU就能去做其他事情了
+```
+
+#### 内核态和用户态
+
+```
+女同学想让你修个电脑,但是宿管阿姨不放你进女生宿舍,这个时候你就是用户态
+你不能进女生宿舍,所以你只能让宿管阿姨来帮你把电脑取出来,这个时候宿管阿姨内核态
+```
+
 #### 内存
 
 ```
