--- a/RocketMQ/源码解析/源码解析0-关键类.md
+++ b/RocketMQ/源码解析/源码解析0-关键类.md
@@ -1,3 +1,40 @@
+### 源码解析1
+
+#### DefaultMQProducer
+
+```java
+public class DefaultMQProducer extends ClientConfig implements MQProducer {
+	protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
+  //生产者组
+  private String producerGroup;
+  //队列数量
+  private volatile int defaultTopicQueueNums = 4;
+}
+```
+
+#### DefaultMQProducerImpl
+
+```java
+public class DefaultMQProducerImpl implements MQProducerInner {
+  //key是Topic
+  //value是TopicPublishInfo
+  private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<String, TopicPublishInfo>();
+  private MQClientInstance mQClientFactory;
+}
+```
+
+#### TopicPublishInfo
+
+```java
+public class TopicPublishInfo {
+	
+}
+```
+
+---
+
+### 源码解析2-3
+
 #### BrokerController
 
 ```java
