--- a/RocketMQ/环境搭建.md
+++ b/RocketMQ/环境搭建.md
@@ -1,25 +1,24 @@
-单机部署RockerMQ
+### 单机安装RockerMQ
 
-    //官方给的教程是通过source进行安装
-    //这里使用Binary安装
-    下载地址:https://rocketmq.apache.org/dowloading/releases/
-    
-    //解压
-    unzip rocketmq-all-4.7.1-bin-release.zip
-    
-    //进入bin
-    //修改runserver.sh
-    -server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m
-    //启动name server
-    ./mqnamesrv
-    
-    
-    //进入bin
-    //修改runbroker.sh
-    -server -Xms512m -Xmx512m -Xmn256m
-    //启动broker
-    ./mqbroker -n localhost:9876
-    
+#### Name Server和Broker
+
+官方给的教程是通过source进行安装
+这里使用Binary安装,下载地址:https://rocketmq.apache.org/dowloading/releases/
+
+```sh
+#解压
+unzip rocketmq-all-4.7.1-bin-release.zip
+
+#进入bin目录
+#修改runserver.sh:-server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m
+#启动Name Server
+./mqnamesrv
+
+#修改runbroker.sh:-server -Xms512m -Xmx512m -Xmn256m
+#启动broker
+./mqbroker -n localhost:9876
+```
+
 安装控制台
 
     //rocketmq-externals
@@ -34,7 +33,7 @@
     
     //运行
     java -jar rocketmq-console-ng-2.0.0.jar --rocketmq.config.namesrvAddr=127.0.0.1:9876
-    
+
 测试
 
     //修改tools.sh
