--- a/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
+++ b/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
@@ -32,25 +32,43 @@ public void processRequestCommand(final ChannelHandlerContext ctx, final Remotin
 #### 2.SendMessageProcessor#asyncProcessRequest
 
 ```java
-public void asyncProcessRequest(ChannelHandlerContext ctx, RemotingCommand request, RemotingResponseCallback responseCallback) throws Exception {
+public void asyncProcessRequest(ChannelHandlerContext ctx, RemotingCommand request, RemotingResponseCallback responseCallback) {
   asyncProcessRequest(ctx, request);
 }
 ↓
 ↓
-public CompletableFuture<RemotingCommand> asyncProcessRequest(ChannelHandlerContext ctx, RemotingCommand request) throws RemotingCommandException {
-  return this.asyncSendMessage(ctx, request, mqtraceContext, requestHeader);
+public CompletableFuture<RemotingCommand> asyncProcessRequest(ChannelHandlerContext ctx, RemotingCommand request) {
+  switch (request.getCode()) {
+  	default:
+      //解析RemotingCommand得到SendMessageRequestHeader
+      SendMessageRequestHeader requestHeader = parseRequestHeader(request);
+      else {
+        return this.asyncSendMessage(ctx, request, mqtraceContext, requestHeader);
+      }
+  }
 }
 ↓
 ↓
 private CompletableFuture<RemotingCommand> asyncSendMessage(ChannelHandlerContext ctx, RemotingCommand request, SendMessageContext mqtraceContext, SendMessageRequestHeader requestHeader) {
   //创建MessageExtBrokerInner
   MessageExtBrokerInner msgInner = new MessageExtBrokerInner();
-	//设置topic
+	//设置Topic
   msgInner.setTopic(requestHeader.getTopic());
-
-  putMessageResult = this.brokerController.getMessageStore().asyncPutMessage(msgInner);
+  //设置队列id
+  msgInner.setQueueId(requestHeader.getQueueId());
+	//设置消息
+  msgInner.setBody(body);
+  
+  CompletableFuture<PutMessageResult> putMessageResult = null;
+  else {
+	  putMessageResult = this.brokerController.getMessageStore().asyncPutMessage(msgInner);    
+  }
 }
 ```
+
+![发送Broker的消息](./DEBUG_发送消息_5.png)
+
+![发送Broker的消息](./DEBUG_发送消息_6.png)
 
 #### 3.DefaultMessageStore#asyncPutMessage
 
@@ -64,11 +82,11 @@ public CompletableFuture<PutMessageResult> asyncPutMessage(MessageExtBrokerInner
 
 ```java
 public CompletableFuture<PutMessageResult> asyncPutMessage(final MessageExtBrokerInner msg) {
-  //写入结果
-  AppendMessageResult result = null;
-  //获取最后一个CommitLog
+	//写入消息结果
+  AppendMessageResult result = null;  
+	//获取最后一个CommitLog
   MappedFile mappedFile = this.mappedFileQueue.getLastMappedFile();
-  //低版本这里使用的自旋锁,高并发非常影响机器性能,这里建议改成ReentrantLock
+  //低版本这里使用的自旋锁,高并发非常影响机器性能,这里建议改成使用ReentrantLock
   putMessageLock.lock();
   try{
     if (null == mappedFile || mappedFile.isFull()) {
@@ -77,6 +95,10 @@ public CompletableFuture<PutMessageResult> asyncPutMessage(final MessageExtBroke
     }
     //写入消息
     result = mappedFile.appendMessage(msg, this.appendMessageCallback); //6
+    switch (result.getStatus()) {
+      case PUT_OK:
+        break;
+    }
   } finally {
     //释放锁
     putMessageLock.unlock();
@@ -173,12 +195,15 @@ public AppendMessageResult appendMessagesInner(final MessageExt messageExt, fina
                                              byteBuffer,
                                              this.fileSize - currentPos, //剩余的空间
                                              (MessageExtBrokerInner) messageExt); //7
+    //增加写入长度
     this.wrotePosition.addAndGet(result.getWroteBytes());
     this.storeTimestamp = result.getStoreTimestamp();
     return result;
   }
 }
 ```
+
+![发送Broker的消息](./DEBUG_发送消息_7.png)
 
 #### 7.DefaultAppendMessageCallback#doAppend
 
@@ -187,35 +212,91 @@ public AppendMessageResult doAppend(final long fileFromOffset,
                                     final ByteBuffer byteBuffer,
                                     final int maxBlank,
                                     final MessageExtBrokerInner msgInner) {
-  //复用msgStoreItemMemory
+	//计算写入总长度
+  /**
+   * 	4 //TOTALSIZE
+   * 	4 //MAGICCODE
+   * 	4 //BODYCRC
+   *  4 //QUEUEID
+   *  4 //FLAG
+   *  8 //QUEUEOFFSET
+   *  8 //PHYSICALOFFSET
+   *  4 //SYSFLAG
+   *  8 //BORNTIMESTAMP
+   *  8 //取决于MessageSysFlag.BORNHOST_V6_FLAG
+   *  8 //STORETIMESTAMP
+   *  4 //RECONSUMETIMES
+   *  8 //Prepared Transaction Offset
+   *  4 + BodyLength //消息体长度 + BobyLength
+   *  1 + TopicLength //Topic长度 + TopicLength   
+   *  2 + PropertiesLength //Properties长度 + PropertiesLength
+   */
+  final int msgLen = calMsgLength(msgInner.getSysFlag(), bodyLength, topicLength, propertiesLength);
+  
+  //这里复用msgStoreItemMemory
   this.resetByteBuffer(msgStoreItemMemory, msgLen);
   // 1 TOTALSIZE
   this.msgStoreItemMemory.putInt(msgLen);
   // 2 MAGICCODE
   this.msgStoreItemMemory.putInt(CommitLog.MESSAGE_MAGIC_CODE);
-
+  // 3 BODYCRC
+  this.msgStoreItemMemory.putInt(msgInner.getBodyCRC());
+  // 4 QUEUEID
+  this.msgStoreItemMemory.putInt(msgInner.getQueueId());
+  // 5 FLAG
+  this.msgStoreItemMemory.putInt(msgInner.getFlag());
+  // 6 QUEUEOFFSET
+  this.msgStoreItemMemory.putLong(queueOffset);
+  // 7 PHYSICALOFFSET
+  this.msgStoreItemMemory.putLong(fileFromOffset + byteBuffer.position());
+  // 8 SYSFLAG
+  this.msgStoreItemMemory.putInt(msgInner.getSysFlag());
+  // 9 BORNTIMESTAMP
+  this.msgStoreItemMemory.putLong(msgInner.getBornTimestamp());
+  // 10 BORNHOST
+  this.resetByteBuffer(bornHostHolder, bornHostLength);
+  this.msgStoreItemMemory.put(msgInner.getBornHostBytes(bornHostHolder));
+  // 11 STORETIMESTAMP
+  this.msgStoreItemMemory.putLong(msgInner.getStoreTimestamp());
+  // 12 STOREHOSTADDRESS
+  this.resetByteBuffer(storeHostHolder, storeHostLength);
+  this.msgStoreItemMemory.put(msgInner.getStoreHostBytes(storeHostHolder));
+  // 13 RECONSUMETIMES
+  this.msgStoreItemMemory.putInt(msgInner.getReconsumeTimes());
+  // 14 Prepared Transaction Offset
+  this.msgStoreItemMemory.putLong(msgInner.getPreparedTransactionOffset());
+  // 15 BODY
+  this.msgStoreItemMemory.putInt(bodyLength);
+  this.msgStoreItemMemory.put(msgInner.getBody());
+  // 16 TOPIC
+  this.msgStoreItemMemory.put((byte) topicLength);
+  this.msgStoreItemMemory.put(topicData);
+  // 17 PROPERTIES
+  this.msgStoreItemMemory.putShort((short) propertiesLength);
+  this.msgStoreItemMemory.put(propertiesData);
 
   final long beginTimeMills = CommitLog.this.defaultMessageStore.now();
-  //写入
+  //写入MMAP
   byteBuffer.put(this.msgStoreItemMemory.array(), 0, msgLen);
+  
+  //返回值
   AppendMessageResult result = new AppendMessageResult(AppendMessageStatus.PUT_OK,
                                                        wroteOffset, //物理地址
-                                                       msgLen,
-                                                       msgId,
+                                                       msgLen, //消息长度
+                                                       msgId, //消息id
                                                        msgInner.getStoreTimestamp(),
                                                        queueOffset,
                                                        CommitLog.this.defaultMessageStore.now() - beginTimeMills);
-	//默认情况tranType等于0
+  
 	switch (tranType) {
     case MessageSysFlag.TRANSACTION_NOT_TYPE:
-    //这里主要用来设置queueOffset
     case MessageSysFlag.TRANSACTION_COMMIT_TYPE:
+      //这里设置queueOffset+1
       CommitLog.this.topicQueueTable.put(key, ++queueOffset);
       break;
   }
   return result;
 }
-
 ```
 
 ---
