--- a/Rocket MQ/源码解析/源码解析0-关键类.md
+++ b/Rocket MQ/源码解析/源码解析0-关键类.md
@@ -1,11 +1,10 @@
-### 源码解析1
+### 源码解析1.1-1.2
 
 #### DefaultMQProducer
 
 ```java
 public class DefaultMQProducer extends ClientConfig implements MQProducer {
 	protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
-  //生产者组
   private String producerGroup;
   //队列数量
   private volatile int defaultTopicQueueNums = 4;
@@ -16,8 +15,7 @@ public class DefaultMQProducer extends ClientConfig implements MQProducer {
 
 ```java
 public class DefaultMQProducerImpl implements MQProducerInner {
-  //key是Topic
-  //value是TopicPublishInfo
+  //key:Topic value:TopicPublishInfo
   private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<String, TopicPublishInfo>();
   private MQClientInstance mQClientFactory;
 }
@@ -27,13 +25,82 @@ public class DefaultMQProducerImpl implements MQProducerInner {
 
 ```java
 public class TopicPublishInfo {
-	
+  private List<MessageQueue> messageQueueList = new ArrayList<MessageQueue>();
+  private volatile ThreadLocalIndex sendWhichQueue = new ThreadLocalIndex();
+  private TopicRouteData topicRouteData;
+}
+```
+
+#### MQClientInstance
+
+```java
+public class MQClientInstance {
+  //Group:MQProducerInner
+  private final ConcurrentMap<String, MQProducerInner> producerTable = new ConcurrentHashMap<String, MQProducerInner>();
+  private final MQClientAPIImpl mQClientAPIImpl;
+  //Topic:TopicRouteData
+  private final ConcurrentMap<String, TopicRouteData> topicRouteTable = new ConcurrentHashMap<String, TopicRouteData>();
+}
+```
+
+#### MQClientAPIImpl
+
+```java
+public class MQClientAPIImpl {
+	private final RemotingClient remotingClient;
+}
+```
+
+#### TopicRouteData
+
+```java
+public class TopicRouteData extends RemotingSerializable {
+	private List<QueueData> queueDatas;
+  private List<BrokerData> brokerDatas;
+}
+```
+
+#### QueueData
+
+```java
+public class QueueData implements Comparable<QueueData> {
+	//"dlinkaCGdeMacBook-Pro.local"
+  private String brokerName;
+  //"4"
+  private int readQueueNums;
+  //"4"
+  private int writeQueueNums;
+  //"6"
+  private int perm;
+}
+```
+
+#### BrokerData
+
+```java
+public class BrokerData implements Comparable<BrokerData> {
+	//"DefaultCluster"
+  private String cluster;
+	//"dlinkaCGdeMacBook-Pro.local"
+  private String brokerName;
+  //brokerId:"0",broker address:"10.0.161.163:10911"
+  private HashMap<Long, String> brokerAddrs;
+}
+```
+
+#### MessageQueue
+
+```java
+public class MessageQueue implements Comparable<MessageQueue>, Serializable {
+	private String topic;
+	private String brokerName;
+	private int queueId;
 }
 ```
 
 ---
 
-### 源码解析2-3
+### 源码解析2.1-2.2
 
 #### BrokerController
 
