--- a/Rocket MQ/源码解析/源码解析1.2-发送消息.md
+++ b/Rocket MQ/源码解析/源码解析1.2-发送消息.md
@@ -1,39 +1,37 @@
-
-
 #### 1.DefaultMQProducer#send
 
 ```java
 public SendResult send(Message msg) {
   return this.defaultMQProducerImpl.send(msg);
 }
-```
-
-#### 2.DefaultMQProducerImpl#send
-
-```java
+↓
+↓
+//DefaultMQProducerImpl#send
 public SendResult send(Message msg) {
   return send(msg, this.defaultMQProducer.getSendMsgTimeout());
 }
 ↓
 ↓
+//DefaultMQProducerImpl#send
 public SendResult send(Message msg, long timeout) {
   //同步发送消息
   return this.sendDefaultImpl(msg, CommunicationMode.SYNC, null, timeout);
 }
 ↓
 ↓
+//DefaultMQProducerImpl#sendDefaultImpl
 private SendResult sendDefaultImpl(Message msg,
                                    final CommunicationMode communicationMode,
                                    final SendCallback sendCallback,
                                    final long timeout) {
   //获取TopicPublishInfo
-	TopicPublishInfo topicPublishInfo = this.tryToFindTopicPublishInfo(msg.getTopic()); //3
+	TopicPublishInfo topicPublishInfo = this.tryToFindTopicPublishInfo(msg.getTopic()); //2
   
   //根据TopicPublishInfo随机选择一个MessageQueue
-	MessageQueue mqSelected = this.selectOneMessageQueue(topicPublishInfo, lastBrokerName); //4
+	MessageQueue mqSelected = this.selectOneMessageQueue(topicPublishInfo, lastBrokerName); //3
   
-  //发送消息
-	SendResult sendResult = this.sendKernelImpl(msg, mq, communicationMode, sendCallback, topicPublishInfo, timeout - costTime); //5
+  //发送
+	SendResult sendResult = this.sendKernelImpl(msg, mq, communicationMode, sendCallback, topicPublishInfo, timeout - costTime); //4
   
   switch (communicationMode) {
   	case SYNC:
@@ -43,15 +41,14 @@ private SendResult sendDefaultImpl(Message msg,
 }
 ```
 
-#### 3.DefaultMQProducerImpl#tryToFindTopicPublishInfo
+#### 2.DefaultMQProducerImpl#tryToFindTopicPublishInfo
 
 ```java
 private TopicPublishInfo tryToFindTopicPublishInfo(final String topic) {
 	TopicPublishInfo topicPublishInfo = this.topicPublishInfoTable.get(topic);
   if (null == topicPublishInfo || !topicPublishInfo.ok()) {
-    this.topicPublishInfoTable.putIfAbsent(topic, new TopicPublishInfo());
-    //从NameServer获取TopicRouteDate,然后构建TopicPublishInfo
-    this.mQClientFactory.updateTopicRouteInfoFromNameServer(topic); //3.1
+    //从NameServer获取TopicRouteData,然后根据TopicRouteData构建TopicPublishInfo
+    this.mQClientFactory.updateTopicRouteInfoFromNameServer(topic); //2.1
     topicPublishInfo = this.topicPublishInfoTable.get(topic);
   }
 
@@ -61,7 +58,7 @@ private TopicPublishInfo tryToFindTopicPublishInfo(final String topic) {
 }
 ```
 
-#### 3.1.MQClientInstance#updateTopicRouteInfoFromNameServer
+#### 2.1.MQClientInstance#updateTopicRouteInfoFromNameServer
 
 ```java
 public boolean updateTopicRouteInfoFromNameServer(final String topic) {
@@ -70,35 +67,34 @@ public boolean updateTopicRouteInfoFromNameServer(final String topic) {
 ↓
 ↓
 public boolean updateTopicRouteInfoFromNameServer(final String topic, boolean isDefault, DefaultMQProducer defaultMQProducer) {
-	//从NameServer获取TopicRouteData信息
   TopicRouteData topicRouteData;
   else {
-   topicRouteData = this.mQClientAPIImpl.getTopicRouteInfoFromNameServer(topic, 1000 * 3); //3.2
+   //从NameServer获取TopicRouteData信息
+   topicRouteData = this.mQClientAPIImpl.getTopicRouteInfoFromNameServer(topic, 1000 * 3); //2.2
   }
   if (topicRouteData != null) {
-    //判断和之前的TopicRouteData是否一致
   	TopicRouteData old = this.topicRouteTable.get(topic);
+		//判断和之前的TopicRouteData是否一致
     boolean changed = topicRouteDataIsChange(old, topicRouteData);
     
     //如果发生变化
     if(changed){
       TopicRouteData cloneTopicRouteData = topicRouteData.cloneTopicRouteData();
-      
-      //更新生产者信息
+
+      //根据TopicRouteDate创建TopicPublishInfo
       {
-        //根据TopicRouteDate创建TopicPublishInfo
       	TopicPublishInfo publishInfo = topicRouteData2TopicPublishInfo(topic, topicRouteData);
       	publishInfo.setHaveTopicRouterInfo(true);
         Iterator<Entry<String, MQProducerInner>> it = this.producerTable.entrySet().iterator();
         while (it.hasNext()) {
           Entry<String, MQProducerInner> entry = it.next();
-          //impl的实现类是DefaultMQProducerImpl
           MQProducerInner impl = entry.getValue();
-					//更新DefaultMQProducerImpl#topicPublishInfoTable
+					//DefaultMQProducerImpl#topicPublishInfoTable
           impl.updateTopicPublishInfo(topic, publishInfo);
         }
       }
       
+      //MQClientInstance#topicRouteTable
       this.topicRouteTable.put(topic, cloneTopicRouteData);
       return true;
     }
@@ -129,7 +125,7 @@ public static TopicPublishInfo topicRouteData2TopicPublishInfo(final String topi
 }
 ```
 
-#### 3.2.MQClientAPIImpl#getTopicRouteInfoFromNameServer
+#### 2.2.MQClientAPIImpl#getTopicRouteInfoFromNameServer
 
 ```java
 public TopicRouteData getTopicRouteInfoFromNameServer(final String topic, final long timeoutMillis) {
@@ -154,7 +150,7 @@ public TopicRouteData getTopicRouteInfoFromNameServer(final String topic, final 
 }
 ```
 
-#### 4.DefaultMQProducerImpl#selectOneMessageQueue
+#### 3.DefaultMQProducerImpl#selectOneMessageQueue
 
 ```java
 public MessageQueue selectOneMessageQueue(final TopicPublishInfo tpInfo, final String lastBrokerName) {
@@ -184,6 +180,7 @@ public MessageQueue selectOneMessageQueue() {
 }
 ↓
 ↓
+//ThreadLocalIndex#getAndIncrement
 public int getAndIncrement() {
   Integer index = this.threadLocalIndex.get();
   if (null == index) {
@@ -198,11 +195,10 @@ public int getAndIncrement() {
 }
 ```
 
-#### 5.DefaultMQProducerImpl#sendKernelImpl
+#### 4.DefaultMQProducerImpl#sendKernelImpl
 
 ```java
-private SendResult sendKernelImpl(final Message msg, final MessageQueue mq, final CommunicationMode communicationMode,
-                                  final SendCallback sendCallback, final TopicPublishInfo topicPublishInfo, final long timeout)
+private SendResult sendKernelImpl(final Message msg, final MessageQueue mq, final CommunicationMode communicationMode, final SendCallback sendCallback, final TopicPublishInfo topicPublishInfo, final long timeout)
   //IP:PORT
   String brokerAddr = this.mQClientFactory.findBrokerAddressInPublish(mq.getBrokerName());
 
@@ -244,6 +240,7 @@ private SendResult sendKernelImpl(final Message msg, final MessageQueue mq, fina
             this);
           break;
       }
+      
       return sendResult;
     }
   }
@@ -280,11 +277,13 @@ public SendResult sendMessage(
         final DefaultMQProducerImpl producer) {
   RemotingCommand request = null;
   if (sendSmartMsg || msg instanceof MessageBatch) {
+    //轻量数据体
     SendMessageRequestHeaderV2 requestHeaderV2 = SendMessageRequestHeaderV2.createSendMessageRequestHeaderV2(requestHeader);
     request = RemotingCommand.createRequestCommand(RequestCode.SEND_MESSAGE_V2, requestHeaderV2);
   }
   //设置请求体
   request.setBody(msg.getBody());
+  
   switch (communicationMode) {
   	case SYNC:
       return this.sendMessageSync(addr, brokerName, msg, timeoutMillis - costTimeSync, request);
