--- a/Rocket MQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
+++ b/Rocket MQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
@@ -12,103 +12,182 @@ producer.shutdown();
 
 ---
 
-#### 1.DefaultMQProducer的构造函数
+### 相关类
+
+#### DefaultMQProducer
 
 ```java
-public DefaultMQProducer(final String producerGroup) {
-  this(null, producerGroup, null);
-}
-↓
-↓
-public DefaultMQProducer(final String namespace, final String producerGroup, RPCHook rpcHook) {
-  this.producerGroup = producerGroup;
-  defaultMQProducerImpl = new DefaultMQProducerImpl(this, rpcHook);
+public class DefaultMQProducer extends ClientConfig implements MQProducer {
+	protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
+  private String producerGroup;
+  private volatile int defaultTopicQueueNums = 4; //队列数量
+  
+  public DefaultMQProducer(final String producerGroup) {
+    this(null, producerGroup, null);
+  }
+  
+	public DefaultMQProducer(final String namespace, final String producerGroup, RPCHook rpcHook) {
+  	this.producerGroup = producerGroup;
+  	defaultMQProducerImpl = new DefaultMQProducerImpl(this, rpcHook);
+	}
 }
 ```
 
-#### 2.DefaultMQProducerImpl的构造函数
+#### DefaultMQProducerImpl
 
 ```java
-public DefaultMQProducerImpl(final DefaultMQProducer defaultMQProducer, RPCHook rpcHook) {
-  this.defaultMQProducer = defaultMQProducer;
-  //定义阻塞队列
-  this.asyncSenderThreadPoolQueue = new LinkedBlockingQueue<Runnable>(50000);
-  //定义线程池
-  this.defaultAsyncSenderExecutor = new ThreadPoolExecutor(
-    Runtime.getRuntime().availableProcessors(), Runtime.getRuntime().availableProcessors(),
-    1000 * 60, TimeUnit.MILLISECONDS,
-    this.asyncSenderThreadPoolQueue,
-    new ThreadFactory() {
-      private AtomicInteger threadIndex = new AtomicInteger(0);
-      @Override
-      public Thread newThread(Runnable r) {
-        return new Thread(r, "AsyncSenderExecutor_" + this.threadIndex.incrementAndGet());
-      }
-    });
+public class DefaultMQProducerImpl implements MQProducerInner {
+  private final DefaultMQProducer defaultMQProducer;
+  //键值对:Topic,TopicPublishInfo
+  private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<String, TopicPublishInfo>();
+  private MQClientInstance mQClientFactory;
+
+  public DefaultMQProducerImpl(final DefaultMQProducer defaultMQProducer, RPCHook rpcHook) {
+    this.defaultMQProducer = defaultMQProducer;
+  }
 }
 ```
 
-#### 3.DefaultMQProducer#start
+#### MQClientInstance
+
+```java
+public class MQClientInstance {
+  //键值对:Group,MQProducerInner
+  private final ConcurrentMap<String, MQProducerInner> producerTable = new ConcurrentHashMap<String, MQProducerInner>();
+  private final MQClientAPIImpl mQClientAPIImpl;
+  //键值对:Topic,TopicRouteData
+  private final ConcurrentMap<String, TopicRouteData> topicRouteTable = new ConcurrentHashMap<String, TopicRouteData>();
+  
+  public MQClientInstance(ClientConfig clientConfig, int instanceIndex, String clientId, RPCHook rpcHook) {
+    this.mQClientAPIImpl = new MQClientAPIImpl(this.nettyClientConfig, this.clientRemotingProcessor, rpcHook, clientConfig);
+    if (this.clientConfig.getNamesrvAddr() != null) {
+      this.mQClientAPIImpl.updateNameServerAddressList(this.clientConfig.getNamesrvAddr());
+    }
+    this.pullMessageService = new PullMessageService(this);
+  }
+}
+```
+
+#### MQClientAPIImpl
+
+```java
+public class MQClientAPIImpl {
+	private final RemotingClient remotingClient;
+}
+```
+
+#### TopicPublishInfo
+
+```java
+public class TopicPublishInfo {
+  private List<MessageQueue> messageQueueList = new ArrayList<MessageQueue>();
+  private volatile ThreadLocalIndex sendWhichQueue = new ThreadLocalIndex();
+  private TopicRouteData topicRouteData;
+}
+```
+
+#### TopicRouteData
+
+```java
+public class TopicRouteData extends RemotingSerializable {
+	private List<QueueData> queueDatas;
+  private List<BrokerData> brokerDatas;
+}
+```
+
+#### QueueData
+
+```java
+public class QueueData implements Comparable<QueueData> {
+	//"dlinkaCGdeMacBook-Pro.local"
+  private String brokerName;
+  //"4"
+  private int readQueueNums;
+  //"4"
+  private int writeQueueNums;
+  //"6"
+  private int perm;
+}
+```
+
+#### BrokerData
+
+```java
+public class BrokerData implements Comparable<BrokerData> {
+	//"DefaultCluster"
+  private String cluster;
+	//"dlinkaCGdeMacBook-Pro.local"
+  private String brokerName;
+  //brokerId:"0",broker address:"10.0.161.163:10911"
+  private HashMap<Long, String> brokerAddrs;
+}
+```
+
+#### MessageQueue
+
+```java
+public class MessageQueue implements Comparable<MessageQueue>, Serializable {
+	private String topic;
+	private String brokerName;
+	private int queueId;
+}
+```
+
+---
+
+### 源码解析
+
+#### 1.DefaultMQProducer#start
 
 ```java
 public void start() {
   this.defaultMQProducerImpl.start();
 }
-```
-
-#### 4.DefaultMQProducerImpl#start
-
-```java
+↓
+↓
+//DefaultMQProducerImpl#start
 public void start() {
   this.start(true);
 }
 ↓
 ↓
+//DefaultMQProducerImpl#start
 public void start(final boolean startFactory) {
   switch (this.serviceState) {
     case CREATE_JUST:
-      this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(this.defaultMQProducer, rpcHook); //5
-			//MQClientInstance#producerTable
+      
+      this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(this.defaultMQProducer, rpcHook); //2
+			
+      //MQClientInstance#producerTable
       boolean registerOK = mQClientFactory.registerProducer(this.defaultMQProducer.getProducerGroup(), this);
+      
       if (startFactory) {
-        mQClientFactory.start(); //6
+        mQClientFactory.start(); //3
       }
       break;
   }
 }
 ```
 
-#### 5.MQClientManager#getOrCreateMQClientInstance
+#### 2.MQClientManager#getOrCreateMQClientInstance
 
 ```java
 public MQClientInstance getOrCreateMQClientInstance(final ClientConfig clientConfig, RPCHook rpcHook) {
-  //"ip@pid"
+  //IP@PID
   String clientId = clientConfig.buildMQClientId();
   MQClientInstance instance = this.factoryTable.get(clientId);
   if (null == instance) {
-    //构造MQClientInstance
+    //创建MQClientInstance
     instance = new MQClientInstance(clientConfig.cloneClientConfig(),
                                     this.factoryIndexGenerator.getAndIncrement(),
                                     clientId,
                                     rpcHook);
-    
-    MQClientInstance prev = this.factoryTable.putIfAbsent(clientId, instance);
   }
   return instance;
 }
-↓
-↓
-//MQClientInstance的构造函数
-public MQClientInstance(ClientConfig clientConfig, int instanceIndex, String clientId, RPCHook rpcHook) {
-	this.mQClientAPIImpl = new MQClientAPIImpl(this.nettyClientConfig, this.clientRemotingProcessor, rpcHook, clientConfig);
-  if (this.clientConfig.getNamesrvAddr() != null) {
-    this.mQClientAPIImpl.updateNameServerAddressList(this.clientConfig.getNamesrvAddr());
-  }
-  this.pullMessageService = new PullMessageService(this);
-}
 ```
 
-#### 6.MQClientInstance#start
+#### 3.MQClientInstance#start
 
 ```java
 public void start() {
@@ -120,7 +199,5 @@ public void start() {
   } 
 }
 ```
-
-
 
 ---
