--- a/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
+++ b/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
@@ -1,8 +1,7 @@
-#### 1.NettyRemotingAbstract#processMessageReceived
-
-**NettyRemotingAbstract是NettyRemotingServer的父类**
+#### 1.NettyRemotingServer#processMessageReceived
 
 ```java
+//NettyRemotingAbstract#processMessageReceived
 public void processMessageReceived(ChannelHandlerContext ctx, RemotingCommand msg) throws Exception {
   switch (cmd.getType()) {
     case REQUEST_COMMAND:
@@ -13,7 +12,7 @@ public void processMessageReceived(ChannelHandlerContext ctx, RemotingCommand ms
 ↓
 public void processRequestCommand(final ChannelHandlerContext ctx, final RemotingCommand cmd) {
   final Pair<NettyRequestProcessor, ExecutorService> matched = this.processorTable.get(cmd.getCode());
-	//线程池运行的Runnable
+	//创建线程池运行的Runnable
   Runnable run = new Runnable() {
     public void run() {
       if (pair.getObject1() instanceof AsyncNettyRequestProcessor) {
@@ -43,13 +42,16 @@ public CompletableFuture<RemotingCommand> asyncProcessRequest(ChannelHandlerCont
       //解析RemotingCommand得到SendMessageRequestHeader
       SendMessageRequestHeader requestHeader = parseRequestHeader(request);
       else {
-        return this.asyncSendMessage(ctx, request, mqtraceContext, requestHeader);
+        return this.asyncSendMessage(ctx, request, null, requestHeader);
       }
   }
 }
 ↓
 ↓
-private CompletableFuture<RemotingCommand> asyncSendMessage(ChannelHandlerContext ctx, RemotingCommand request, SendMessageContext mqtraceContext, SendMessageRequestHeader requestHeader) {
+private CompletableFuture<RemotingCommand> asyncSendMessage(ChannelHandlerContext ctx,
+                                                            RemotingCommand request,
+                                                            SendMessageContext mqtraceContext,
+                                                            SendMessageRequestHeader requestHeader) {
   //创建MessageExtBrokerInner
   MessageExtBrokerInner msgInner = new MessageExtBrokerInner();
 	//设置Topic
@@ -57,7 +59,7 @@ private CompletableFuture<RemotingCommand> asyncSendMessage(ChannelHandlerContex
   //设置队列id
   msgInner.setQueueId(requestHeader.getQueueId());
 	//设置消息
-  msgInner.setBody(body);
+  msgInner.setBody(request.getBody());
   
   CompletableFuture<PutMessageResult> putMessageResult = null;
   else {
@@ -82,18 +84,22 @@ public CompletableFuture<PutMessageResult> asyncPutMessage(MessageExtBrokerInner
 
 ```java
 public CompletableFuture<PutMessageResult> asyncPutMessage(final MessageExtBrokerInner msg) {
-	//写入消息结果
-  AppendMessageResult result = null;  
+	//消息存储结果
+  AppendMessageResult result = null;
+  
 	//获取最后一个CommitLog
   MappedFile mappedFile = this.mappedFileQueue.getLastMappedFile();
-  //低版本这里使用的自旋锁,高并发非常影响机器性能,这里建议改成使用ReentrantLock
+  
+  //低版本这里使用的CAS自旋锁,高并发非常影响机器性能,这里建议改成使用ReentrantLock
   putMessageLock.lock();
   try{
+    
     if (null == mappedFile || mappedFile.isFull()) {
       //创建CommitLog文件
       mappedFile = this.mappedFileQueue.getLastMappedFile(0); //5
     }
-    //写入消息
+    
+    //存储消息
     result = mappedFile.appendMessage(msg, this.appendMessageCallback); //6
     switch (result.getStatus()) {
       case PUT_OK:
@@ -115,27 +121,20 @@ public MappedFile getLastMappedFile(final long startOffset) {
 ↓
 ↓
 public MappedFile getLastMappedFile(final long startOffset, boolean needCreate) {
-  long createOffset = -1;
-  MappedFile mappedFileLast = getLastMappedFile();
-  if (mappedFileLast == null) {
-    createOffset = startOffset - (startOffset % this.mappedFileSize);
+  //"/Users/dlinka/store/commitlog/00000000000000000000"
+  String nextFilePath = this.storePath + File.separator + UtilAll.offset2FileName(createOffset);
+  //"/Users/dlinka/store/commitlog/00000000001073741824"
+  String nextNextFilePath = this.storePath + File.separator + UtilAll.offset2FileName(createOffset + this.mappedFileSize);
+
+  MappedFile mappedFile = null;
+  if (this.allocateMappedFileService != null) {
+    //真正的创建CommitLog
+    mappedFile = this.allocateMappedFileService.putRequestAndReturnMappedFile(nextFilePath, nextNextFilePath, this.mappedFileSize); //5.1和5.2
   }
-  if (createOffset != -1 && needCreate) {
-    //path=/Users/dlinka/store/commitlog/00000000000000000000
-    String nextFilePath = this.storePath + File.separator + UtilAll.offset2FileName(createOffset);
-    //path=/Users/dlinka/store/commitlog/00000000001073741824
-    String nextNextFilePath = this.storePath + File.separator + UtilAll.offset2FileName(createOffset + this.mappedFileSize);
-      
-    MappedFile mappedFile = null;
-    if (this.allocateMappedFileService != null) {
-      //真正的创建CommitLog
-      mappedFile = this.allocateMappedFileService.putRequestAndReturnMappedFile(nextFilePath, nextNextFilePath, this.mappedFileSize); //5.1
-    }
-    if (mappedFile != null) {
-      this.mappedFiles.add(mappedFile);
-    }
-    return mappedFile;
-  }
+  
+  this.mappedFiles.add(mappedFile);
+  
+  return mappedFile;
 }
 ```
 
@@ -176,6 +175,55 @@ public MappedFile putRequestAndReturnMappedFile(String nextFilePath, String next
 }
 ```
 
+#### 5.2.AllocateMappedFileService#run
+
+```java
+public void run() {
+  while (!this.isStopped() && this.mmapOperation()) {
+
+  }
+}
+↓
+↓
+private boolean mmapOperation() {
+  boolean isSuccess = false;
+	AllocateRequest req = null;
+  try {
+    //从优先级阻塞队列中获取CommitLog的创建请求
+    //优先级顺序根据文件名
+		req = this.requestQueue.take();
+    if (req.getMappedFile() == null) {
+      //创建CommitLog
+    	MappedFile mappedFile = new MappedFile(req.getFilePath(), req.getFileSize());
+      req.setMappedFile(mappedFile);
+      isSuccess = true;
+    }
+  } finally {
+    if (req != null && isSuccess)
+      //创建完成,"门栓"打开
+    	req.getCountDownLatch().countDown();
+  }
+  return true;
+}
+↓
+↓
+public MappedFile(final String fileName, final int fileSize) throws IOException {
+  init(fileName, fileSize);
+}
+↓
+↓
+private void init(final String fileName, final int fileSize) throws IOException {
+	this.fileName = fileName;
+  this.fileSize = fileSize;
+  this.file = new File(fileName);
+  this.fileFromOffset = Long.parseLong(this.file.getName());
+  
+  //MMAP
+  this.fileChannel = new RandomAccessFile(this.file, "rw").getChannel();
+  this.mappedByteBuffer = this.fileChannel.map(MapMode.READ_WRITE, 0, fileSize);
+}
+```
+
 #### 6.MappedFile#appendMessage
 
 ```java
@@ -185,17 +233,15 @@ public AppendMessageResult appendMessage(final MessageExtBrokerInner msg, final 
 ↓
 ↓
 public AppendMessageResult appendMessagesInner(final MessageExt messageExt, final AppendMessageCallback cb) {
-  //当前写入的位置
+  //定位当前写入的位置
   int currentPos = this.wrotePosition.get();
   if (currentPos < this.fileSize) {
     ByteBuffer byteBuffer = writeBuffer != null ? writeBuffer.slice() : this.mappedByteBuffer.slice();
-    //定位到当前写入的位置
     byteBuffer.position(currentPos);
     AppendMessageResult result = cb.doAppend(this.getFileFromOffset(),   //文件的偏移,第一个CommitLog等于0
                                              byteBuffer,
                                              this.fileSize - currentPos, //剩余的空间
                                              (MessageExtBrokerInner) messageExt); //7
-    //增加写入长度
     this.wrotePosition.addAndGet(result.getWroteBytes());
     this.storeTimestamp = result.getStoreTimestamp();
     return result;
@@ -212,14 +258,26 @@ public AppendMessageResult doAppend(final long fileFromOffset,
                                     final ByteBuffer byteBuffer,
                                     final int maxBlank,
                                     final MessageExtBrokerInner msgInner) {
-	//计算写入总长度
+	// Record ConsumeQueue information
+  keyBuilder.setLength(0);
+  keyBuilder.append(msgInner.getTopic());
+  keyBuilder.append('-');
+  keyBuilder.append(msgInner.getQueueId());
+  String key = keyBuilder.toString();
+  Long queueOffset = CommitLog.this.topicQueueTable.get(key);
+  if (null == queueOffset) {
+    queueOffset = 0L;
+    CommitLog.this.topicQueueTable.put(key, queueOffset);
+  }
+  
+  //计算写入总长度
   /**
    * 	4 //TOTALSIZE
    * 	4 //MAGICCODE
    * 	4 //BODYCRC
-   *  4 //QUEUEID
+   *  4 //QUEUEID(重要)
    *  4 //FLAG
-   *  8 //QUEUEOFFSET
+   *  8 //QUEUEOFFSET(重要)
    *  8 //PHYSICALOFFSET
    *  4 //SYSFLAG
    *  8 //BORNTIMESTAMP
@@ -227,9 +285,9 @@ public AppendMessageResult doAppend(final long fileFromOffset,
    *  8 //STORETIMESTAMP
    *  4 //RECONSUMETIMES
    *  8 //Prepared Transaction Offset
-   *  4 + BodyLength //消息体长度 + BobyLength
-   *  1 + TopicLength //Topic长度 + TopicLength   
-   *  2 + PropertiesLength //Properties长度 + PropertiesLength
+   *  4 + BodyLength //消息体长度 + BobyLength(重要)
+   *  1 + TopicLength //Topic长度 + TopicLength(重要) 
+   *  2 + PropertiesLength //Properties长度 + PropertiesLength(重要)
    */
   final int msgLen = calMsgLength(msgInner.getSysFlag(), bodyLength, topicLength, propertiesLength);
   
