--- a/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
+++ b/Rocket MQ/源码解析/源码解析2.2-消息存入CommitLog的过程.md
@@ -343,7 +343,7 @@ public AppendMessageResult doAppend(final long fileFromOffset,
                                                        msgLen, //消息长度
                                                        msgId, //消息id
                                                        msgInner.getStoreTimestamp(),
-                                                       queueOffset,
+                                                       queueOffset, //ConsumeQueue中的偏移量
                                                        CommitLog.this.defaultMessageStore.now() - beginTimeMills);
   
 	switch (tranType) {
