--- a/Rocket MQ/环境搭建.md
+++ b/Rocket MQ/环境搭建.md
@@ -1,9 +1,6 @@
-### 单机安装RockerMQ
+#### 单机安装Name Server和Broker
 
-#### Name Server和Broker
-
-官方给的教程是通过source进行安装
-这里使用Binary安装,下载地址:https://rocketmq.apache.org/dowloading/releases/
+官方给的教程是通过source进行安装,这里使用Binary安装,下载地址:https://rocketmq.apache.org/dowloading/releases/
 
 ```sh
 #解压
@@ -15,26 +12,29 @@ unzip rocketmq-all-4.7.1-bin-release.zip
 ./mqnamesrv
 
 #修改runbroker.sh:-server -Xms512m -Xmx512m -Xmn256m
-#启动broker
+#启动Broker
 ./mqbroker -n localhost:9876
 ```
 
-安装控制台
+#### 安装控制台
 
-    //rocketmq-externals
-    git clone git@github.com:apache/rocketmq-externals.git
-    
-    //修改端口
-    //rocketmq-console/src/main/resources/application.properties
-    server.port=8027
-    
-    //打包rocketmq-console
-    mvn clean package -DskipTests
-    
-    //运行
-    java -jar rocketmq-console-ng-2.0.0.jar --rocketmq.config.namesrvAddr=127.0.0.1:9876
+```shell
+#rocketmq-externals
+git clone git@github.com:apache/rocketmq-externals.git
 
-测试
+#切换分支release-rocketmq-console-1.0.0
+
+#修改端口:rocketmq-console/src/main/resources/application.properties
+#server.port=8027
+
+#打包rocketmq-console
+mvn clean package -DskipTests
+
+#运行
+java -jar rocketmq-console-ng-1.0.0.jar --rocketmq.config.namesrvAddr=127.0.0.1:9876
+```
+
+#### 测试
 
     //修改tools.sh
     export NAMESRV_ADDR=localhost:9876
