--- a/ELK/基础搜索.md
+++ b/ELK/基础搜索.md
@@ -1,6 +1,6 @@
-### 查询"手机"
+### 搜索"手机"
 
-```java
+```http
 GET /product_index/_search
 {
   "query": {
@@ -42,10 +42,13 @@ GET /product_index/_search
 }
 ```
 
-### bool
+---
 
-```java
-//类似and
+### bool搜索
+
+**must:类似and**
+
+```http
 GET /product_index/_search
 {
   "query": {
@@ -65,8 +68,11 @@ GET /product_index/_search
     }
   }
 }
+```
 
-//类似or
+**should:类似or**
+
+```http
 GET /product_index/_search
 {
   "query": {
@@ -86,8 +92,11 @@ GET /product_index/_search
     }
   }
 }
+```
 
-//类似not
+**must_not:类似not**
+
+```http
 GET /product_index/_search
 {
   "query": {
@@ -104,16 +113,20 @@ GET /product_index/_search
 }
 ```
 
-### 不分词查询
+---
+
+### 精确搜索
 
 #### term
 
-```java
+直接搜索"手机"这个词的倒排搜索,不会对"手机"这个词进行分词查询
+
+如果此时分词器是'Standard Analyzer',这样就会导致即使商品的name等于"手机",也会查不出来
+
+```http
 GET /product_index/_search
 {
   "query": {
-    //直接查找"手机"这个词的倒排搜索,不会对"手机"这个词进行分词查询
-    //默认情况分词器是'Standard Analyzer',这样就会导致即使name等于"手机",也会查不出来
     "term": {
       "name": {
         "value": "手机"
@@ -125,12 +138,13 @@ GET /product_index/_search
 
 #### keyword
 
-```java
+如果name字段是keyword类型,那么这里也不会进行分词查询
+
+```http
 GET /product_index/_search
 {
   "query": {
     "match": {
-      //如果name字段是keyword类型,那么这里不会进行分词查询
       "name": "手机"
     }
   }
