--- a/ELK/基础操作.md
+++ b/ELK/基础操作.md
@@ -1,10 +1,14 @@
 ### GET
 
-```java
-//查看索引
-GET /user_index
+**查看索引**
 
-//查看文档
+```http
+GET /user_index
+```
+
+**查看文档**
+
+```http
 GET /user_index/_doc/10000001
 ```
 
@@ -12,8 +16,9 @@ GET /user_index/_doc/10000001
 
 ### PUT
 
-```java
-//创建索引
+**创建索引**
+
+```http
 PUT /user_index
 {
   "mappings": {
@@ -27,9 +32,11 @@ PUT /user_index
     }
   }
 }
+```
 
-//创建文档,如果不存在索引同时会创建索引
-//覆盖文档
+**创建文档(如果不存在索引同时会创建索引)或者覆盖文档**
+
+```http
 PUT /user_index/_doc/10000001
 {
 	"name":"CR",
@@ -41,16 +48,9 @@ PUT /user_index/_doc/10000001
 
 ### POST
 
-```java
-//修改文档
-POST /user_index/_update/10000001
-{
-	"doc":{
-		"name":"CR27"
-	}
-}
+**创建文档**
 
-//创建文档
+```http
 POST /user_index/_doc
 {
   "name":"CR",
@@ -58,15 +58,30 @@ POST /user_index/_doc
 }
 ```
 
+**修改文档**
+
+```http
+POST /user_index/_update/10000001
+{
+	"doc":{
+		"name":"CR27"
+	}
+}
+```
+
 ---
 
 ### DELETE
 
-```java
-//删除索引
-DELETE /user_index
+删除索引
 
-//删除文档
+```http
+DELETE /user_index
+```
+
+删除文档
+
+```http
 DELETE /user_index/_doc/10000001
 ```
 
