--- a/RocketMQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
+++ b/RocketMQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
@@ -14,17 +14,22 @@ producer.shutdown();
 
 ### 相关类
 
+#### ClientConfig
+
+```java
+public class ClientConfig {
+	private String namesrvAddr = NameServerAddressUtils.getNameServerAddresses();
+}
+```
+
 #### DefaultMQProducer
 
 ```java
 public class DefaultMQProducer extends ClientConfig implements MQProducer {
-	protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
+  protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
   private String producerGroup;
   private volatile int defaultTopicQueueNums = 4; //队列数量
-  
-  public DefaultMQProducer(final String producerGroup) {
-    this(null, producerGroup, null);
-  }
+  private int sendMsgTimeout = 3000; //超时时间
   
 	public DefaultMQProducer(final String namespace, final String producerGroup, RPCHook rpcHook) {
   	this.producerGroup = producerGroup;
@@ -38,41 +43,11 @@ public class DefaultMQProducer extends ClientConfig implements MQProducer {
 ```java
 public class DefaultMQProducerImpl implements MQProducerInner {
   private final DefaultMQProducer defaultMQProducer;
-  //键值对:Topic,TopicPublishInfo
-  private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<String, TopicPublishInfo>();
-  private MQClientInstance mQClientFactory;
-
-  public DefaultMQProducerImpl(final DefaultMQProducer defaultMQProducer, RPCHook rpcHook) {
-    this.defaultMQProducer = defaultMQProducer;
-  }
-}
-```
-
-#### MQClientInstance
-
-```java
-public class MQClientInstance {
-  //键值对:Group,MQProducerInner
-  private final ConcurrentMap<String, MQProducerInner> producerTable = new ConcurrentHashMap<String, MQProducerInner>();
-  private final MQClientAPIImpl mQClientAPIImpl;
-  //键值对:Topic,TopicRouteData
-  private final ConcurrentMap<String, TopicRouteData> topicRouteTable = new ConcurrentHashMap<String, TopicRouteData>();
   
-  public MQClientInstance(ClientConfig clientConfig, int instanceIndex, String clientId, RPCHook rpcHook) {
-    this.mQClientAPIImpl = new MQClientAPIImpl(this.nettyClientConfig, this.clientRemotingProcessor, rpcHook, clientConfig);
-    if (this.clientConfig.getNamesrvAddr() != null) {
-      this.mQClientAPIImpl.updateNameServerAddressList(this.clientConfig.getNamesrvAddr());
-    }
-    this.pullMessageService = new PullMessageService(this);
-  }
-}
-```
-
-#### MQClientAPIImpl
-
-```java
-public class MQClientAPIImpl {
-	private final RemotingClient remotingClient;
+  //<Topic, TopicPublishInfo>
+  private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<>();
+  
+  private MQClientInstance mQClientFactory;
 }
 ```
 
@@ -99,14 +74,10 @@ public class TopicRouteData extends RemotingSerializable {
 
 ```java
 public class QueueData implements Comparable<QueueData> {
-	//"dlinkaCGdeMacBook-Pro.local"
-  private String brokerName;
-  //"4"
-  private int readQueueNums;
-  //"4"
-  private int writeQueueNums;
-  //"6"
-  private int perm;
+  private String brokerName; 	//"dlinkaCGdeMacBook-Pro.local"
+  private int readQueueNums; 	//"4"
+  private int writeQueueNums; //"4"
+  private int perm; 					//"6"
 }
 ```
 
@@ -114,12 +85,9 @@ public class QueueData implements Comparable<QueueData> {
 
 ```java
 public class BrokerData implements Comparable<BrokerData> {
-	//"DefaultCluster"
-  private String cluster;
-	//"dlinkaCGdeMacBook-Pro.local"
-  private String brokerName;
-  //brokerId:"0",broker address:"10.0.161.163:10911"
-  private HashMap<Long, String> brokerAddrs;
+  private String cluster; 									 //"DefaultCluster"
+  private String brokerName;                 //"dlinkaCGdeMacBook-Pro.local"
+  private HashMap<Long, String> brokerAddrs; //"0:10.0.161.163:10911(BrokerId:BrokerAddress)"
 }
 ```
 
@@ -143,51 +111,56 @@ public class MessageQueue implements Comparable<MessageQueue>, Serializable {
 public void start() {
   this.defaultMQProducerImpl.start();
 }
-↓
-↓
-//DefaultMQProducerImpl#start
+```
+
+#### 2.DefaultMQProducerImpl#start
+
+```java
 public void start() {
   this.start(true);
 }
 ↓
 ↓
-//DefaultMQProducerImpl#start
 public void start(final boolean startFactory) {
   switch (this.serviceState) {
     case CREATE_JUST:
       
-      this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(this.defaultMQProducer, rpcHook); //2
+      this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(
+        this.defaultMQProducer,
+        rpcHook
+      ); //3
 			
       //MQClientInstance#producerTable
       boolean registerOK = mQClientFactory.registerProducer(this.defaultMQProducer.getProducerGroup(), this);
       
       if (startFactory) {
-        mQClientFactory.start(); //3
+        mQClientFactory.start(); //4
       }
       break;
   }
 }
 ```
 
-#### 2.MQClientManager#getOrCreateMQClientInstance
+#### 3.MQClientManager#getOrCreateMQClientInstance
 
 ```java
 public MQClientInstance getOrCreateMQClientInstance(final ClientConfig clientConfig, RPCHook rpcHook) {
-  //IP@PID
   String clientId = clientConfig.buildMQClientId();
+  
   MQClientInstance instance = this.factoryTable.get(clientId);
   if (null == instance) {
-    //创建MQClientInstance
-    instance = new MQClientInstance(clientConfig.cloneClientConfig(),
-                                    this.factoryIndexGenerator.getAndIncrement(),
-                                    clientId,
-                                    rpcHook);
+    instance = new MQClientInstance(
+      clientConfig.cloneClientConfig(), //DefaultMQProducer
+      this.factoryIndexGenerator.getAndIncrement(),
+      clientId, //"IP@PID"
+      rpcHook
+    );
   }
   return instance;
 }
 ```
 
-#### 3.MQClientInstance#start
+#### 4.MQClientInstance#start
 
 ```java
 public void start() {
