--- a/RocketMQ/环境搭建.md
+++ b/RocketMQ/环境搭建.md
@@ -7,7 +7,7 @@
 unzip rocketmq-all-4.7.1-bin-release.zip
 
 #进入bin目录
-#修改runserver.sh:-server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m
+#修改runserver.sh:-server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m(每一项除以4)
 #启动Name Server
 ./mqnamesrv
 
