--- a/RocketMQ/源码解析/源码解析1.2-发送消息.md
+++ b/RocketMQ/源码解析/源码解析1.2-发送消息.md
@@ -80,6 +80,11 @@ public boolean updateTopicRouteInfoFromNameServer(final String topic, boolean is
     //如果发生变化
     if(changed){
       TopicRouteData cloneTopicRouteData = topicRouteData.cloneTopicRouteData();
+      
+      for (BrokerData bd : topicRouteData.getBrokerDatas()) {
+        //<brokerName:"dlinkaCGdeMacBook-Pro.local",<brokerId:"0",broker address:"10.0.161.163:10911">>
+        this.brokerAddrTable.put(bd.getBrokerName(), bd.getBrokerAddrs());
+      }
 
       //根据TopicRouteDate创建TopicPublishInfo
       {
