--- a/设计模式/门面模式.md
+++ b/设计模式/门面模式.md
@@ -1,26 +1,25 @@
-### Tomcat中的使用场景
+### Tomcat
 
-**在DispatcherServlet的doService方法中打个断点,看到参数HttpServletRequest的实现类是RequestFacade类**
+DispatcherServlet的doService方法中打个断点
+
+看到参数HttpServletRequest的实现类是RequestFacade类
 ![image](https://user-images.githubusercontent.com/4274041/69867633-55d2ab00-12e2-11ea-8eea-9aae5719a6d1.png)
 
-
-
-**其实Tomcat中对HttpServletRequest的实现类本来是Request(org.apache.catalina.connector.Request)**
-
-**但是如果直接传入Request对象,不符合我们正常的逻辑,也有可能会给我们的系统带来不好的影响**
+Tomcat中对HttpServletRequest的实现类其实本来是Request类(org.apache.catalina.connector.Request)
 
 ![image](https://user-images.githubusercontent.com/4274041/69867904-2a03f500-12e3-11ea-9898-d7a4ee9ecd76.png)
 
 ![image](https://user-images.githubusercontent.com/4274041/80709889-b3348780-8b20-11ea-94c2-f9600afbe351.png)
 
+**但是如果直接传入Request对象,不符合我们一些正常的逻辑**
 
-**比如Request对象的addCookie方法,Request对象代表的是浏览器的一个请求,里面的属性理论上是不应该被我们人为修改的**
+**比如Request代表的是浏览器的一个请求,Request对象中的addCookie方法理论上是不应该被我们人为修改的**
 
 ![image](https://user-images.githubusercontent.com/4274041/69868255-2f157400-12e4-11ea-8a73-2b4744736ab9.png)
 
 
 
-**使用RequestFacade类型,这个类型就会帮我们屏蔽addCookie等方法**
+**使用门面模式,利用RequestFacade就会帮我们屏蔽addCookie等方法**
 ![image](https://user-images.githubusercontent.com/4274041/80711029-47531e80-8b22-11ea-9c51-d18edc8a9d66.png)
 
 ---
